Fix the black screen bug (vibe-kanban) (#19)
